# detection_sam2_yolo

./: README.md  inference.py  pyproject.toml  train.py
models/: download_models.sh
tools/: download_sample_videos.py
