[project]
name = "detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "decord==0.6.0",
    "gdown==6.1.0",
    "opencv-contrib-python==4.13.0.92",
    "opencv-python==4.13.0.92",
    "sam-2 @ git+https://github.com/facebookresearch/sam2",
    "torch==2.9.1+cu128",
    "torchvision==0.24.1+cu128",
    "ultralytics==8.4.66",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "torch-cuda" }]
torchvision = [{ index = "torch-cuda" }]
